# rkyv

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  SECURITY.md  TODO.md  allocation-tracking.html  architecture.html  book.toml  chapter_1.html  contributors.html  crates-io.md  derive-macro-features.html  extensions.html  faq.html  feature-comparison.html  format.html  index.html  motivation.html  print.html  relative-pointers.html  release_checklist.md  rkyv.html  rustfmt.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-d543b748.js  searchindex-da69e242.js  searchindex.js  searchindex.json  seek-and-rooted-archives.html  shared-pointers.html  shared_pointers.html  toc-506a2ae0.js  toc-c5593c61.js  toc-f9b44177.js  toc.html  toc.js  trait-objects.html  (+7 more)
archive/: Cargo.toml
archive/src/: core.rs  core_impl.rs  core_impls.rs  error.rs  lib.rs  std.rs  std_impl.rs  std_impls.rs
archive/src/builtin/: core.rs  mod.rs  std.rs
archive/src/builtin/hashbrown/: bitmask.rs  mod.rs
archive/src/hashmap_impl/: mod.rs  sse2.rs
archive_dyn/: Cargo.toml
archive_dyn/src/: lib.rs
archive_dyn_derive/: Cargo.toml
archive_dyn_derive/src/: lib.rs
archive_test/: Cargo.toml
archive_test/src/: lib.rs
benchlib/: Cargo.toml
benchlib/src/: generate.rs  lib.rs
examples/json/: Cargo.toml
examples/json/src/: main.rs
rkyv/: .gitignore  Cargo.toml  README.md  build.rs  crates-io.md
rkyv/benches/: bench.rs  log.rs  mesh.rs  minecraft_savedata.rs
rkyv/examples/: backwards_compat.rs  complex_wrapper_types.rs  derive_partial_ord.rs  explicit_enum_discriminants.rs  json_like_schema.rs  niching.rs  readme.rs  remote_types.rs
rkyv/src/: _macros.rs  alias.rs  bitvec.rs  boxed.rs  bytecheck_impl.rs  copy.rs  core_impl.rs  erased.rs  ffi.rs  fmt.rs  hash.rs  lib.rs  macros.rs  net.rs  ops.rs  option.rs  place.rs  polyfill.rs  primitive.rs  rc.rs  rel_ptr.rs  result.rs  seal.rs  std_impl.rs  string.rs  test.rs  time.rs  traits.rs  tuple.rs  util.rs  validation.rs  vec.rs  with.rs
rkyv/src/api/: checked.rs  mod.rs
rkyv/src/api/high/: checked.rs  mod.rs
rkyv/src/api/low/: checked.rs  mod.rs
rkyv/src/api/test/: inner_checked.rs  inner_unchecked.rs  mod.rs  outer_high.rs  outer_low.rs
rkyv/src/buffer/: alloc.rs  mod.rs
rkyv/src/collections/: btree_map.rs  btree_set.rs  hash_set.rs  index_map.rs  index_set.rs  mod.rs  raw_swiss_table.rs  swiss_set.rs  swiss_table.rs  util.rs
rkyv/src/collections/btree/: mod.rs  set.rs
rkyv/src/collections/btree_map/: iter.rs  mod.rs  validation.rs
rkyv/src/collections/hash_index/: mod.rs  validation.rs
rkyv/src/collections/hash_map/: mod.rs  validation.rs
rkyv/src/collections/index_map/: mod.rs  validation.rs
rkyv/src/collections/swiss_table/: index_map.rs  index_set.rs  map.rs  mod.rs  set.rs  table.rs
rkyv/src/collections/swisstable/: mod.rs
rkyv/src/collections/util/: mod.rs  validation.rs
rkyv/src/core_impl/: bytecheck_impl.rs  mod.rs  primitive.rs  range.rs  time.rs  validation.rs
rkyv/src/core_impl/primitive/: mod.rs  validation.rs
rkyv/src/de/: adapters.rs  deserializers.rs  mod.rs
rkyv/src/de/deserializers/: alloc.rs  mod.rs
rkyv/src/de/pooling/: alloc.rs  core.rs  mod.rs
rkyv/src/hashmap_impl/: bitmask.rs  generic.rs  mod.rs  validation.rs
rkyv/src/impls/: arrayvec.rs  bitvec.rs  bytes.rs  decimal.rs  hashbrown.rs  indexmap.rs  mod.rs  niche.rs  noisy_float.rs  pg_types.rs  rend.rs  smallvec.rs  smolstr.rs  smolstr_02.rs  smolstr_03.rs  thin_vec.rs  tinyvec.rs  triomphe.rs  url.rs  uuid.rs
rkyv/src/impls/alloc/: boxed.rs  ffi.rs  mod.rs  niche.rs  rc.rs  string.rs  vec.rs  with.rs
rkyv/src/impls/bitvec/: alloc.rs  mod.rs
rkyv/src/impls/core/: ffi.rs  mod.rs  net.rs  ops.rs  option.rs  primitive.rs  range.rs  result.rs  time.rs
rkyv/src/niche/: decider.rs  mod.rs  niched_option.rs  niching.rs  option_box.rs  option_float.rs  option_nonzero.rs
rkyv/src/primitive/: _macros.rs  atomic.rs  mod.rs
rkyv/src/rc/: mod.rs  validation.rs
rkyv/src/rel_ptr/: mod.rs  validation.rs
rkyv/src/ser/: adapters.rs  mod.rs  serializers.rs
rkyv/src/simd/: generic.rs  mod.rs  neon.rs  sse2.rs
rkyv/src/std_impl/: mod.rs  net.rs  shared.rs  validation.rs
rkyv/src/string/: mod.rs  repr.rs
rkyv/src/util/: aligned_vec.rs  alloc.rs  inline_vec.rs  mod.rs  scratch_vec.rs  ser_vec.rs  std.rs
rkyv/src/validation/: buffer.rs  mod.rs  owned.rs  util.rs  validators.rs
rkyv/src/vec/: mod.rs  raw.rs
rkyv/src/with/: alloc.rs  atomic.rs  core.rs  mod.rs  option_box.rs  std.rs  std_impl.rs
rkyv/tests/: derive.rs  ui.rs
rkyv/tests/derive/: explicit_enum_discriminants.rs  main.rs  raw_identifiers.rs  util.rs
rkyv/tests/ui/: derive_visibility.rs  raw_identifiers.rs  the_most_unhelpful_error.rs  the_most_unhelpful_error.stderr
rkyv_bench/: Cargo.toml
rkyv_bench/benches/: bench.rs
rkyv_bench/src/: main.rs
rkyv_derive/: Cargo.toml
rkyv_derive/src/: archive.rs  attributes.rs  deserialize.rs  freeze.rs  lib.rs  portable.rs  repr.rs  serialize.rs  util.rs  with.rs
rkyv_derive/src/archive/: enum.rs  mod.rs  printing.rs  struct.rs
rkyv_derive/src/serde/: mod.rs  receiver.rs  respan.rs
rkyv_dyn/: Cargo.toml  README.md  crates-io.md
rkyv_dyn/src/: bytecheck.rs  lazy_static.rs  lib.rs  validation.rs
rkyv_dyn_derive/: Cargo.toml
rkyv_dyn_derive/src/: lib.rs
rkyv_dyn_test/: Cargo.toml
rkyv_dyn_test/src/: lib.rs  validation.rs
rkyv_test/: Cargo.toml  build.rs
rkyv_test/src/: alloc.rs  lib.rs  std.rs  test_alloc.rs  test_std.rs  util.rs  validation.rs
rkyv_test/src/validation/: alloc.rs  bytecheck_reexport.rs  mod.rs  std.rs  test_alloc.rs  test_std.rs  util.rs
rkyv_typename/: Cargo.toml  README.md  crates-io.md
rkyv_typename/src/: core_impl.rs  lib.rs  std_impl.rs
rkyv_typename/src/const_generic_impl/: core_impl.rs  mod.rs
rkyv_typename/src/typename_impl/: core_impl.rs  mod.rs
rkyv_typename/tests/: test_derive.rs
rkyv_typename_derive/: Cargo.toml
rkyv_typename_derive/src/: lib.rs
type_name/: Cargo.toml
type_name/src/: core_impl.rs  lib.rs  std_impl.rs
(+170 files in other folders)
