[workspace]
members = [
    "examples/backwards_compat",
    "examples/json",
    "examples/opcode",
    "rkyv",
    "rkyv_derive",
    "rkyv_dyn",
    "rkyv_dyn_derive",
    "rkyv_dyn_test",
    "rkyv_test",
]
resolver = "2"

[workspace.package]
# STOP! RESOLVE ALL TODOS IN CODE AND TODO.md BEFORE PUBLISHING 0.8.0!
version = "0.8.0-alpha.1"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rkyv"
repository = "https://github.com/rkyv/rkyv"

[workspace.dependencies]
bytecheck = { version = "0.8.0-pre6", default-features = false, features = ["simdutf8"] }
hashbrown = "0.14"
proc-macro2 = "1.0"
ptr_meta = { version = "0.3.0-pre1", default-features = false }
quote = "1.0"
rend = { version = "0.5.0-pre6", default-features = false }
rancor = { version = "0.1.0-pre8", default-features = false }
rkyv = { version = "0.8.0-alpha.1", default-features = false, path = "rkyv" }
rkyv_derive = { version = "0.8.0-alpha.1", default-features = false, path = "rkyv_derive" }
rkyv_dyn = { version = "0.8.0-alpha.1", default-features = false, path = "rkyv_dyn" }
rkyv_dyn_derive = { version = "=0.8.0-alpha.1", default-features = false, path = "rkyv_dyn_derive" }
syn = "2.0"
wasm-bindgen-test = "0.3"
