[workspace]
members = [
    "examples/*",
    "rkyv",
    "rkyv_derive",
    "rkyv_dyn",
    "rkyv_dyn_derive",
    "rkyv_dyn_test",
    "rkyv_test",
]
default-members = [
    "examples/*",
    "rkyv",
    "rkyv_derive",
    "rkyv_test",
]
resolver = "2"

[workspace.package]
# STOP! RESOLVE ALL TODOS IN CODE AND TODO.md BEFORE PUBLISHING 0.8.0!
version = "0.8.0-alpha.2"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rkyv"
repository = "https://github.com/rkyv/rkyv"

[workspace.dependencies]
bytecheck = { version = "=0.8.0-alpha.9", default-features = false, features = ["simdutf8"] }
hashbrown = "0.14"
proc-macro2 = "1.0"
ptr_meta = { version = "=0.3.0-alpha.2", default-features = false }
quote = "1.0"
rend = { version = "=0.5.0-alpha.7", default-features = false }
rancor = { version = "=0.1.0-alpha.9", default-features = false }
rkyv = { version = "=0.8.0-alpha.2", default-features = false, path = "rkyv" }
rkyv_derive = { version = "=0.8.0-alpha.2", default-features = false, path = "rkyv_derive" }
rkyv_dyn = { version = "=0.8.0-alpha.2", default-features = false, path = "rkyv_dyn" }
rkyv_dyn_derive = { version = "=0.8.0-alpha.2", default-features = false, path = "rkyv_dyn_derive" }
syn = "2.0"
wasm-bindgen-test = "0.3"

[patch.crates-io]
rancor = { git = "https://github.com/rkyv/rancor" }
