[workspace]
members = [
    "benchlib",
    "rkyv",
    "rkyv_derive",
    # "rkyv_dyn",
    # "rkyv_dyn_derive",
    # "rkyv_dyn_test",
]
default-members = ["rkyv", "rkyv_derive"]
resolver = "2"

[workspace.package]
version = "0.8.12"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
rust-version = "1.81"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rkyv/rkyv"

[workspace.dependencies]
bytecheck = { version = "0.8", default-features = false, features = ["simdutf8"] }
divan = { version = "0.1", default-features = false }
hashbrown = { version = "0.16", default-features = false }
munge = { version = "0.4", default-features = false }
proc-macro2 = { version = "1", default-features = false }
ptr_meta = { version = "0.3", default-features = false }
quote = { version = "1", default-features = false }
rend = { version = "0.5", default-features = false }
rancor = { version = "0.1", default-features = false }
rkyv = { version = "0.8", default-features = false, path = "rkyv" }
rkyv_derive = { version = "=0.8.12", default-features = false, path = "rkyv_derive" }
# rkyv_dyn = { version = "=0.8.0-rc.1", default-features = false, path = "rkyv_dyn" }
# rkyv_dyn_derive = { version = "=0.8.0-rc.1", default-features = false, path = "rkyv_dyn_derive" }
rustversion = { version = "1", default-features = false }
syn = { version = "2.0.73", default-features = false }
trybuild = { version = "1", default-features = false }

[patch.crates-io]
bytecheck = { git = "https://github.com/rkyv/bytecheck" }
ptr_meta = { git = "https://github.com/rkyv/ptr_meta" }
rancor = { git = "https://github.com/rkyv/rancor" }
rend = { git = "https://github.com/rkyv/rend" }

[profile.bench]
debug = true
