[package]
name = "archive"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[features]
default = []
const_generics = []
no_std = []