[package]
name = "archive"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.5", optional = true }
archive_derive = { path = "../archive_derive" }
cfg-if = { version = "1.0", optional = true }
memoffset = "0.6"

[features]
default = ["std", "inline_more"]
const_generics = []
inline_more = []
more_portable = []
nightly = []
specialization = []
std = ["ahash", "cfg-if"]
