[package]
name = "archive_dyn"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive = { version = "0.1", path = "../archive" }
archive_dyn_derive = { version = "=0.1.0", path = "../archive_dyn_derive" }
lazy_static = "1.4"
inventory = "0.1"
type_name = { version = "0.1", path = "../type_name" }

[dev-dependencies]
archive_dyn_derive = { version = "0.1", path = "../archive_dyn_derive" }

[features]
default = []
vtable_cache = []
nightly = ["archive/nightly"]
