[package]
name = "archive_test"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
archive = { path = "../archive" }

[features]
default = ["std", "inline_more"]
const_generics = ["archive/const_generics"]
inline_more = ["archive/inline_more"]
more_portable = ["archive/more_portable"]
specialization = ["archive/specialization"]
std = ["archive/std"]
