[package]
name = "archive_test"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
archive = { version = "0.1", path = "../archive" }
archive_dyn = { version = "0.1", path = "../archive_dyn" }
type_name = { version = "0.1", path = "../type_name" }

[features]
default = ["std", "inline_more"]
const_generics = ["archive/const_generics", "type_name/const_generics"]
inline_more = ["archive/inline_more"]
more_portable = ["archive/more_portable"]
nightly = ["archive/nightly", "archive_dyn/nightly"]
specialization = ["archive/specialization"]
std = ["archive/std"]
vtable_cache = ["archive_dyn/vtable_cache"]
