[package]
name = "benchlib"
publish = false
description = "Benchmark library for rkyv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan.workspace = true
rand = { version = "0.8", default-features = false }
rand_pcg = "0.3"
