[package]
name = "rkyv_bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytecheck.workspace = true
criterion = "0.3"
rand = "0.8"
rand_pcg = "0.3"
rkyv = { path = "../rkyv", default-features = false, features = ["validation"] }
rkyv_derive = { path = "../rkyv_derive" }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["rkyv/size_32", "rkyv/std"]
archive_le = ["rkyv/archive_le"]
archive_be = ["rkyv/archive_be"]

[[bench]]
name = "bench"
harness = false
