[package]
name = "rkyv_dyn"
description = "Trait object support for rkyv"
keywords = ["archive", "rkyv", "serialization", "zero-copy", "no_std"]
categories = ["encoding", "no-std"]
readme = "crates-io.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { workspace = true, optional = true }
inventory = "0.1"
lazy_static = "1.4"
ptr_meta.workspace = true
rkyv = { version = "0.7.43", path = "../rkyv", default-features = false }
rkyv_dyn_derive = { version = "0.7.43", path = "../rkyv_dyn_derive" }
rkyv_typename = { version = "0.7.43", path = "../rkyv_typename" }

[features]
default = ["rkyv/size_32", "rkyv/std"]
archive_le = ["rkyv/archive_le"]
archive_be = ["rkyv/archive_be"]
nightly = []
strict = ["rkyv/strict"]
validation = ["bytecheck", "rkyv/validation", "rkyv_dyn_derive/validation"]
vtable_cache = []

[package.metadata.docs.rs]
features = ["validation"]
