[package]
name = "rkyv_dyn"
description = "Trait object support for rkyv"
keywords = ["archive", "rkyv", "serialization", "zero-copy", "no_std"]
categories = ["encoding", "no-std"]
# TODO: make a new README before publishing
# readme = "crates-io.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { workspace = true, optional = true }
lazy_static = "1.4"
ptr_meta.workspace = true
rancor.workspace = true
rkyv.workspace = true
rkyv_dyn_derive.workspace = true

[features]
default = ["std", "bytecheck"]
std = ["bytecheck?/std"]
bytecheck = ["dep:bytecheck", "rkyv/bytecheck", "rkyv_dyn_derive/bytecheck"]

[package.metadata.docs.rs]
features = ["bytecheck"]
