[package]
name = "rkyv_dyn_derive"
version = "0.7.6"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Macros for rkyv_dyn"
license = "MIT"
documentation = "https://docs.rs/rkyv_dyn_derive"
repository = "https://github.com/rkyv/rkyv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[features]
default = []
validation = []

[package.metadata.docs.rs]
all-features = true
