[package]
name = "rkyv_dyn_test"
version = "0.7.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Test suit for rkyv_dyn"
license = "MIT"
repository = "https://github.com/rkyv/rkyv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { version = "0.6.0", optional = true }
ptr_meta = "~0.1.3"
rkyv = { path = "../rkyv", default-features = false }
rkyv_dyn = { path = "../rkyv_dyn", default-features = false }
rkyv_typename = { path = "../rkyv_typename", default-features = false }
wasm-bindgen-test = { version = "0.3", optional = true }

[features]
default = ["rkyv/size_32", "rkyv/std", "validation"]
archive_le = ["rkyv/archive_le", "rkyv_dyn/archive_le"]
archive_be = ["rkyv/archive_be", "rkyv_dyn/archive_be"]
nightly = ["rkyv_dyn/nightly"]
strict = ["rkyv_dyn/strict"]
validation = ["bytecheck", "rkyv_dyn/validation"]
vtable_cache = ["rkyv_dyn/vtable_cache"]
wasm = ["wasm-bindgen-test"]
