[package]
name = "rkyv_dyn_test"
description = "Test suit for rkyv_dyn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { workspace = true, features = ["std"], optional = true }
ptr_meta.workspace = true
rkyv = { path = "../rkyv", default-features = false }
rkyv_dyn = { path = "../rkyv_dyn", default-features = false }
rkyv_typename = { path = "../rkyv_typename", default-features = false }
wasm-bindgen-test = { workspace = true, optional = true }

[features]
default = ["rkyv/std", "validation"]
nightly = ["rkyv_dyn/nightly"]
strict = ["rkyv_dyn/strict"]
validation = ["bytecheck", "rkyv_dyn/validation"]
vtable_cache = ["rkyv_dyn/vtable_cache"]
wasm = ["wasm-bindgen-test"]
