[package]
name = "rkyv_dyn_test"
description = "Test suite for rkyv_dyn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { workspace = true, features = ["std"], optional = true }
ptr_meta.workspace = true
rkyv.workspace = true
rkyv_dyn = { path = "../rkyv_dyn", default-features = false }

[features]
default = ["rkyv/std", "bytecheck"]
bytecheck = ["dep:bytecheck", "rkyv_dyn/bytecheck"]
