[package]
name = "rkyv_test"
description = "Test suite for rkyv crates"
version = "0.8.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rkyv"
repository = "https://github.com/rkyv/rkyv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptr_meta = { workspace = true, default-features = false }
rkyv = { path = "../rkyv", default-features = false }
wasm-bindgen-test = { workspace = true, optional = true }
ahash = { version = "0.7" }

[features]
default = ["pointer_width_32", "little_endian", "strict", "std", "validation"]

pointer_width_16 = ["rkyv/pointer_width_16"]
pointer_width_32 = ["rkyv/pointer_width_32"]
pointer_width_64 = ["rkyv/pointer_width_64"]

little_endian = ["rkyv/little_endian"]
big_endian = ["rkyv/big_endian"]

alloc = ["rkyv/alloc"]
copy = ["rkyv/copy"]
copy_unsafe = ["rkyv/copy_unsafe"]
std = ["alloc", "rkyv/std"]
strict = ["rkyv/strict"]
validation = ["alloc", "rkyv/validation"]
wasm = ["wasm-bindgen-test"]
