[package]
name = "rkyv_test"
description = "Test suite for rkyv crates"
version = "0.7.43"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rkyv"
repository = "https://github.com/rkyv/rkyv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptr_meta = { workspace = true, default-features = false }
rkyv = { path = "../rkyv", default-features = false }
wasm-bindgen-test = { workspace = true, optional = true }
ahash = { version = "0.7" }

[features]
default = ["std", "size_32", "validation"]
alloc = ["rkyv/alloc"]
arbitrary_enum_discriminant = ["rkyv/arbitrary_enum_discriminant"]
archive_be = ["rkyv/archive_be"]
archive_le = ["rkyv/archive_le"]
copy = ["rkyv/copy"]
copy_unsafe = ["rkyv/copy_unsafe"]
rend = ["rkyv/rend"]
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
std = ["alloc", "rkyv/std"]
strict = ["rkyv/strict"]
validation = ["alloc", "rkyv/validation"]
wasm = ["wasm-bindgen-test"]
