[package]
name = "rkyv_test"
publish = false
description = "Test suite for rkyv crates"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptr_meta.workspace = true
rkyv.workspace = true
wasm-bindgen-test = { workspace = true, optional = true }
ahash = { version = "0.7" }

[features]
default = ["pointer_width_32", "little_endian", "std", "bytecheck"]

pointer_width_16 = ["rkyv/pointer_width_16"]
pointer_width_32 = ["rkyv/pointer_width_32"]
pointer_width_64 = ["rkyv/pointer_width_64"]

little_endian = ["rkyv/little_endian"]
big_endian = ["rkyv/big_endian"]

alloc = ["rkyv/alloc"]
bytecheck = ["rkyv/bytecheck"]
copy = ["rkyv/copy"]
copy_unsafe = ["rkyv/copy_unsafe"]
std = ["alloc", "rkyv/std"]
wasm = ["wasm-bindgen-test"]
