[package]
name = "rkyv_typename"
version = "0.7.33"
description = "Customizable naming for types"
keywords = ["archive", "rkyv", "serialization", "zero-copy", "no_std"]
categories = ["encoding", "no-std"]
readme = "crates-io.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv_typename_derive = { path = "../rkyv_typename_derive" }

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
