[package]
name = "rkyv_typename"
description = "Customizable naming for types"
keywords = ["archive", "rkyv", "serialization", "zero-copy", "no_std"]
categories = ["encoding", "no-std"]
readme = "crates-io.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv_typename_derive = { version = "=0.8.0", path = "../rkyv_typename_derive" }

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
