[package]
name = "rkyv_typename_derive"
version = "0.5.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Derive macro for rkyv_typename"
license = "MIT"
documentation = "https://docs.rs/rkyv_typename_derive"
repository = "https://github.com/djkoloski/rkyv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[package.metadata.docs.rs]
all-features = true
