[package]
name = "rkyv_typename_derive"
version = "0.7.33"
description = "Derive macro for rkyv_typename"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true

[package.metadata.docs.rs]
all-features = true
