[package]
name = "type_name"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type_name_derive = { version = "=0.1.0", path = "../type_name_derive" }

[dev-dependencies]
type_name_derive = { version = "0.1", path = "../type_name_derive" }

[features]
default = ["std"]
const_generics = []
std = []
